# practice-area

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: Cargo.toml  diesel.toml
api/src/: config.rs  main.rs  models.rs  schema.rs
api/src/world/: functions.rs  mod.rs
api_project/: Cargo.toml
api_project/api/src/: types.rs
api_project/api/src/world/: functions.rs  services.rs
common/: Cargo.toml
frontend/: Cargo.toml
game_bevy/: Cargo.toml  README.md
game_bevy/src/: main.rs
game_bevy/src/components/: mod.rs
game_bevy/src/config/: mod.rs
game_bevy/src/entities/: mod.rs
game_bevy/src/plugins/: mod.rs
game_bevy/src/scenes/: mod.rs
game_bevy/src/systems/: mod.rs
wasm-stuff/: Cargo.toml
wasm-stuff/src/: main.rs
wasm-stuff/web/: package-lock.json  package.json  svelte.config.js
wasm-stuff/web/src/routes/: +layout.ts
