[package]
name = "wasm-stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.6.1"
tokio = {version = "1.28.2", features = ["full"]}
warp = "0.3.5"
warp-embed = "0.4.0"
log = "0.4.18"
env_logger = "0.10.0"